--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+server.port=0
+spring.application.name=LEAVE-REQUESTS-SERVICE
 
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8777/eureka/
