--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka:password@localhost:8777/eureka/
+
+
+queue:
+  leave-entitlements: q.leave-entitlements
